tests/NormalTests/paczka1/small_fuzzy/26997161.err
Error in line 2: XqLQOM1bP8i S647 70,6
Error in line 6: XqLQOM1bP8i A310 31,0
Error in line 9: XqLQOM1bP8i S647 21,2
Error in line 13: 8IF6k A310 11,4
